Remove sharp and add analytics

--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,7 +1,11 @@
 import "../styles/main.css";
+import { SpeedInsights } from '@vercel/speed-insights/next';
 
 export default function App({ Component, pageProps }) {
   return (
-    <Component {...pageProps} />
+    <>
+      <Component {...pageProps} />
+      <SpeedInsights />
+    </>
   );
 }
