--- a/pages/tags/[tag].mdx
+++ b/pages/tags/[tag].mdx
@@ -2,9 +2,11 @@
 type: tag
 ---
 
-import { TagName, TagTitle } from 'nextra-theme-blog/tags'
+import { TagName, TagTitle } from "nextra-theme-blog/tags";
 
 <TagTitle />
 # Posts Tagged with “<TagName />”
 
-export { getStaticProps, getStaticPaths } from 'nextra-theme-blog/tags'
+export { getStaticProps, getStaticPaths } from 'nextra-theme-blog/tags
+
+'
