--- a/pages/tags/[tag].mdx
+++ b/pages/tags/[tag].mdx
@@ -7,6 +7,4 @@ import { TagName, TagTitle } from "nextra-theme-blog/tags";
 <TagTitle />
 # Posts Tagged with “<TagName />”
 
-export { getStaticProps, getStaticPaths } from 'nextra-theme-blog/tags
-
-'
+export { getStaticProps, getStaticPaths } from 'nextra-theme-blog/tags'
