--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,11 +1,13 @@
 import "../styles/main.css";
 import { SpeedInsights } from "@vercel/speed-insights/next";
+import { Analytics } from "@vercel/analytics/react";
 
 export default function App({ Component, pageProps }) {
     return (
         <>
             <Component {...pageProps} />
             <SpeedInsights />
+            <Analytics />
         </>
     );
 }
