Add Gemini Pro blog

--- a/pages/posts/rag.mdx
+++ b/pages/posts/rag.mdx
@@ -2,7 +2,7 @@
 title: Kỹ thuật Retrival-Augmented Generation
 date: 2024/3/15
 description: Phân tích và giải thích kỹ thuật Retrival-Augmented Generation để tăng cường kiến thức cho khả năng sinh văn bản của mô hình ngôn ngữ tự nhiên.
-tag: natural processing language, retrieval-augmented generation
+tag: natural processing language, retrieval-augmented generation, large language model
 author: Thinh Pham
 ---
 
